fixed background issue on ios, nginx ssl templating

--- a/frontend/src/components/Background/Background.css
+++ b/frontend/src/components/Background/Background.css
@@ -6,7 +6,6 @@ video {
   min-height: 100%;
   width: auto;
   height: auto;
-  z-index: -100;
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
   transition: 1s opacity;
